# wch_dumper

./: Cargo.toml  Dockerfile  README.md  pinout_dumper.csv
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: main.rs  mtp_handler.rs
src/dumper/: dumper.rs
src/mtp_handler/: consts.rs  lib.rs
src/usb/: mod.rs  mtp.rs
utils/: 0001-Fixed-compilation.patch
